# Onelap2Strava

./: .env.example  .gitignore  LICENSE  README.md  install-scheduled-sync-unix.sh  install-scheduled-sync-windows.cmd  pyproject.toml  run-incremental-sync.cmd  run-incremental-sync.sh
.cursor/rules/: git-commit.mdc  readme-writing.mdc
batchfiles/: README.md  install-scheduled-sync-unix.sh  install-scheduled-sync-windows.cmd  run-incremental-sync.cmd  run-incremental-sync.sh
contexts/: phase1-offline-script.md  phase2-onelap-api.md  phase2-onelap-scraping.md  phase3.1-dedupe-and-resilience.md  phase4-scheduled-sync.md
specs/: product.md  roadmap.md
src/onelap2strava/: __init__.py  cli.py  coords.py  fit_fixer.py  strava_auth.py  strava_client.py  sync.py  sync_log.py
src/onelap2strava/onelap/: __init__.py  auth.py  client.py  models.py
test_data/: README.md
tests/: test_cli.py  test_coords.py  test_fit_fixer.py  test_onelap_client.py  test_sync.py  test_sync_log.py
