[project]
name = "onelap2strava"
version = "0.1.0"
description = "Convert Onelap fit files (GCJ-02 biased) to WGS-84 and upload to Strava."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Onelap2Strava" }]
license = { text = "MIT" }
dependencies = [
    "fit-tool>=0.9.13",
    "stravalib>=2.0",
    "typer>=0.12.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.0",
    "numpy>=1.26.0",
]

[project.scripts]
onelap2strava = "onelap2strava.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/onelap2strava"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
